prometheus/prometheus/prometheus.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: main
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: prometheus
  name: prometheus-main
  namespace: telemetry
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: main
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: prometheus
