prometheus/prometheus/ingress.prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-main
  namespace: telemetry
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: main
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: "prometheus.local.kube"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-main
                port:
                  name: web
